[package]
name = "lazy_winit"
authors = ["peterhenryd"]
description = "A simple library for initializing winit application state lazily without dealing with nullables."
edition = "2024"
homepage = "https://github.com/peterhenryd/lazy_winit"
license-file = "LICENSE"
repository = "https://github.com/peterhenryd/lazy_winit"
version = "0.1.1"

[dependencies]
winit = "0.30.8"